client side : all functions !!

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Toolbox Choice Cristian Ríos"
+      content="Toolbox Challenge Cristian Ríos"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Toolbox Choice | Cristian Ríos</title>
+    <title>Technical choice | Cristian Ríos</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
